--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "yoeunes/toastr": "^2.3"
+        "yoeunes/toastr": "^2.3",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
